# mopher

./: .gitignore  .modules.c.swp  AUTHORS  BUGS  CHANGES  CODE  Changelog  LICENSE  Makefile  Makefile.common.in  Makefile.dist  Makefile.in  README  README.md  TODO  acl.c  acl_lex.l  acl_yacc.y  bootstrap.sh  cf.c  cf_defaults.conf  cf_lex.l  cf_yacc.y  config.h.in  configure  configure.ac  dbt.c  default.acl  default.conf  dist.mk  greylist.c  ht.c  ll.c  log.c  mail.acl  main.c  milter.c  modules.c  parser.c  sock.c  (+3 more)
config/: Makefile.in  mail.acl  mail.acl.test  mopherd.acl  mopherd.acl.example  mopherd.acl.test  mopherd.conf  mopherd.conf.example  mopherd.conf.test
doc/: debian.md  mail.acl.md  mopherd.conf.md
include/: _acl.h.old  acl.h  cf.h  dbt.h  greylist.h  ht.h  log.h  milter.h  modules.h  mopher.h  parser.h  sock.h  table.h  util.h  var.h
make/: mk.admin  mk.common.in
man/: Makefile.in  mail.acl.5  mail.acl.5.man  mopher.7  mopher.7.cat  mopher.7.html  mopher.7.in  mopherctl.8  mopherctl.8.cat  mopherctl.8.html  mopherctl.8.in  mopherd.1.man  mopherd.8  mopherd.8.cat  mopherd.8.html  mopherd.8.in  mopherd.acl.5  mopherd.acl.5.cat  mopherd.acl.5.html  mopherd.acl.5.in  mopherd.conf.5  mopherd.conf.5.cat  mopherd.conf.5.html  mopherd.conf.5.in  mopherd.conf.5.man
mod/acl/: Makefile  milter.c  spamd.c  spf.c  string.c  test.c
mod/db/: Makefile  bdb.c  my.c
mod/tables/: Makefile  greylist.c
src/: .gitignore  Makefile  Makefile.in  acl.c  acl_lex.l  acl_yacc.y  base64.c  blob.c  cf.c  cf_defaults.conf  cf_lex.l  cf_yacc.y  client.c  dbt.c  default.acl  defs.c  exp.c  greylist.c  hash.c  ht.c  ll.c  log.c  main.c  milter.c  moco.c  module.c  modules.c  mopher-greylist.c  mopher-table.c  mopherctl.c  mopherd.c  msgmod.c  msync.c  parser.c  pipe.c  regdom.c  regdom_rules  regdom_rules.c  regdom_test.c  rgx.c  (+13 more)
src/include/: acl.h  base64.h  blob.h  cf.h  client.h  dbt.h  defs.h  exp.h  greylist.h  hash.h  ht.h  ll.h  log.h  milter.h  module.h  mopher.h  msgmod.h  parser.h  pipe.h  regdom.h  rgx.h  server.h  sht.h  sock.h  sql.h  tarpit.h  test.h  util.h  var.h  vlist.h  vp.h  vtable.h  watchdog.h
src/mod/acl/: Makefile  Makefile.in  cast.c  milter.c  rbl.c  spamd.c  spf.c  string.c  test.c
src/mod/db/: Makefile  Makefile.in  bdb.c  my.c  sakila.c
src/mod/tables/: Makefile.in  greylist.c  known.c
src/modules/: Makefile.in  base.c  base64.c  bdb.c  cast.c  clamav.c  counter.c  dblog.c  delivered.c  dnsbl.c  geoip.c  hitlist.c  id.c  list.c  lite.c  memdb.c  milter.c  mongodb.c  p0f.c  pgsql.c  random.c  rbl.c  regex.c  sakila.c  seen.c  spamd.c  spf.c  string.c
util/: backup.sh  mail.sh  prototypes.awk  setup.sh
